[package]
name = "day-7"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "day7_part1"
path = "src/part1.rs"

[[bin]]
name = "day7_part2"
path = "src/part2.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { workspace = true }
atoi = "2"
